--- a/aliyun/css/index.css
+++ b/aliyun/css/index.css
@@ -1,4 +1,7 @@
 .header {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
 }
 
@@ -12,60 +15,20 @@
 }
 
 /* 轮播图 */
-
-.banner {
-      width: 100%;
-      height: 609px;
-      position: relative;
-      overflow: hidden;
-      cursor: pointer;
+.banner{
+    position: relative;
+    width: 100%;
+    height: 640px;
+    overflow: hidden;
 }
-
-.banner-item {
-      position: absolute;
-      width: 100%;
-      transition: .5s;
+.banner-item{
+    /* transition: 1s; */
+    
 }
-
-.banner-detail {
-      position: absolute;
-      bottom: 0;
-      background: #252f34;
-}
-.banner-detail li{
-    padding: 30px 10px 20px 30px; 
-    color: white; 
-}
-.banner-detail li p{
-      width: 80%;
-}
-.banner-detail li:hover{
-      background: #344047;
-}
-.banner-item img {
-      width: 100%;
-      height: 500px;
-}
-
-.banner-title {
-      position: absolute;
-      top: 20%;
-      left: 10%;
-      z-index: 10;
-      color: white;
-}
-
-.banner-link {
-      display: inline-block;
-      margin-top: 30px;
-      padding-bottom: 10px;
-      border-bottom: 3px solid #00c1de;
-      font-size: 30px;
-      color: #fff;
-}
-
-.banner-link:hover {
-      color: #00c1de;
+.banner-item img{
+    width: 100%;
+    height: 640px;
+    float: left;
 }
 
 /* 小图片 */
