--- a/aliyun/css/footer.css
+++ b/aliyun/css/footer.css
@@ -2,6 +2,7 @@
 
 .footer{
    width: 100%;
+   height: 400px;
    min-width: 1200px;
    padding: 20px 20px 0;
    background: #373d41;
@@ -34,7 +35,6 @@ ul.footer-top{
 }
 .list>li>a{
    font-size: .9rem;
-   color: #73777a;
 }
 
 .list>li{
@@ -52,14 +52,12 @@ ul.footer-top{
    padding-top: 32px;
 }
 .footer-bottom>p:first-child a{
-   color: #9b9ea0;
    font-size: 1.2rem;
    margin-right: 35px;
 }
 .footer-bottom>p:nth-child(2) a, .footer-bottom>p:nth-child(3){
    display: inline-block;
    font-size: 14px;
-   color: #73777a;
    margin-right: 10px;
    margin-top: 10px;
 }
