--- a/aliyun/css/register.css
+++ b/aliyun/css/register.css
@@ -1,13 +1,17 @@
 body{
-  background: #f5f5f6;
+  background: url(../img/register/register.jpg);
 }
 /* top */
 .header{
   width: 100%;
   height: 80px;
-  background: #f5f5f6;
+  background: rgba(240, 240, 240, 0);
   border-bottom: 1px solid #D7D8D9;
   position: relative;
+  transition: .5s;
+}
+.header:hover{
+    background: rgba(240, 240, 240, .5);
 }
 .header img{
   position: absolute;
@@ -25,12 +29,30 @@ body{
   height: 540px;
   text-align: center;
   padding: 50px 0;
-  background: #fff;
+  background: rgba(255,255,255,.2);
+  border: 1px solid transparent;
+  border-radius: 10px ;
+}
+.main>h1:first-child{
+    color: #fff;
+}
+input{
+    border-radius: 5px;
+}
+input.num{
+    border-radius: 0 5px 5px 0;
+}
+.d-flex span.num-code{
+    border-radius: 5px 0 0 5px;
+    border:2px solid #9A9A9A;
+    border-right: 0;
+    background: #fff;
 }
 .login{
   position: absolute;
   right: 0;
   top: 10%;
+  color: #fff;
 }
 .main h1{
   padding-bottom: 2rem;
@@ -56,11 +78,25 @@ body{
   margin-bottom: 1rem;
   background: #E8E8E8;
   line-height: 45px;
+  position: relative;
+}
+.slide-bg{
+    width: 300px;
+    background: linear-gradient(to right,#00c1de 200px);
+    padding-left: 50px;
 }
 .form .slide span:first-child{
   display: inline-block;
+  position: absolute;
+  left: 0;
   width: 50px;
+  height: 45px;
   text-align: center;
+  line-height: 45px;
+  background: #00c1de;
+  color: #fff;
+  border: 2px solid #fff;
+  transition: 2s;
 }
 .agree{
   border: none;
@@ -98,6 +134,8 @@ body{
   color: #fff;
   font-size: 14px;
   padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
 }
 .flxed img{
   width: 100%;
