--- a/aliyun/css/details.css
+++ b/aliyun/css/details.css
@@ -6,29 +6,38 @@ body{
     width: 100%;
     height: 400px;
 }
-.banner img{
+.banner-img{
     width: 100%;
     height: 400px;
 }
 
-/* zhuti */
+/* zhuti start*/
 .detail-top{
     height: 50px;
     background: #393939;
     color: #fff;
     padding: 0 50px 0px 100px;
+    position: relative;
+    cursor: pointer;
 }
 .detail-nav{
     height: 50px;
     line-height: 50px;
     text-align: center;
-}
-.detail-top .detail-nav:first-child{
-    background: #00c1de;
+    z-index: 10;
 }
 .detail-nav:hover{
-    background: #484848;
+    background: rgba(255,255,255,.1)
 }
+.detail-slide{
+    position: absolute;
+    left: 100px;
+    width: 210px;
+    height: 50px;
+    background: #00c1de;
+    transition: all .7s;
+}
+/* zhuti end */
 /* main */
 .detail-main{
     min-width: 1200px;
