--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,4 @@
 
-
 #main {
       min-width: 1200px;
 }
@@ -8,7 +7,16 @@
       width: 100%;
       height: 25rem;
 }
+#main .product-icon a:hover p{
+    color: #00c1de;
+    transition: .3s;
+}
 
+/* 头像 */
+#register img{
+    height: 45px;
+    vertical-align: middle;
+}
 /* 轮播图 */
 .banner{
     position: relative;
